--- a/ecrc-procs/ref.bib
+++ b/ecrc-procs/ref.bib
@@ -369,3 +369,87 @@ information).
 	year={1943},
 	publisher={Springer}
 }
+@inproceedings{krizhevsky2012imagenet,
+	  title={Imagenet classification with deep convolutional neural networks},
+	    author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+		  booktitle={Advances in neural information processing systems},
+		    pages={1097--1105},
+			  year={2012}
+}
+@inproceedings{girshick2015fast,
+	  title={Fast r-cnn},
+	    author={Girshick, Ross},
+		  booktitle={Proceedings of the IEEE international conference on computer vision},
+		    pages={1440--1448},
+			  year={2015}
+}
+@inproceedings{graves2013hybrid,
+	  title={Hybrid speech recognition with deep bidirectional LSTM},
+	    author={Graves, Alex and Jaitly, Navdeep and Mohamed, Abdel-rahman},
+		  booktitle={Automatic Speech Recognition and Understanding (ASRU), 2013 IEEE Workshop on},
+		    pages={273--278},
+			  year={2013},
+			    organization={IEEE}
+}
+@inproceedings{lecun1990handwritten,
+	  title={Handwritten digit recognition with a back-propagation network},
+	    author={LeCun, Yann and Boser, Bernhard E and Denker, John S and Henderson, Donnie and Howard, Richard E and Hubbard, Wayne E and Jackel, Lawrence D},
+		  booktitle={Advances in neural information processing systems},
+		    pages={396--404},
+			  year={1990}
+}
+@article{vincent2010stacked,
+	  title={Stacked denoising autoencoders: Learning useful representations in a deep network with a local denoising criterion},
+	    author={Vincent, Pascal and Larochelle, Hugo and Lajoie, Isabelle and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+		  journal={Journal of Machine Learning Research},
+		    volume={11},
+			  number={Dec},
+			    pages={3371--3408},
+				  year={2010}
+}
+@inproceedings{le2013building,
+	  title={Building high-level features using large scale unsupervised learning},
+	    author={Le, Quoc V},
+		  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
+		    pages={8595--8598},
+			  year={2013},
+			    organization={IEEE}
+}
+@article{chapelle2009semi,
+	  title={Semi-supervised learning (chapelle, o. et al., eds.; 2006)[book reviews]},
+	    author={Chapelle, Olivier and Scholkopf, Bernhard and Zien, Alexander},
+		  journal={IEEE Transactions on Neural Networks},
+		    volume={20},
+			  number={3},
+			    pages={542--542},
+				  year={2009},
+				    publisher={IEEE}
+}
+@inproceedings{socher2011semi,
+	  title={Semi-supervised recursive autoencoders for predicting sentiment distributions},
+	    author={Socher, Richard and Pennington, Jeffrey and Huang, Eric H and Ng, Andrew Y and Manning, Christopher D},
+		  booktitle={Proceedings of the conference on empirical methods in natural language processing},
+		    pages={151--161},
+			  year={2011},
+			    organization={Association for Computational Linguistics}
+}
+@inproceedings{chapelle2003cluster,
+	  title={Cluster kernels for semi-supervised learning},
+	    author={Chapelle, Olivier and Weston, Jason and Sch{\"o}lkopf, Bernhard},
+		  booktitle={Advances in neural information processing systems},
+		    pages={601--608},
+			  year={2003}
+}
+@inproceedings{chapelle2005semi,
+	  title={Semi-Supervised Classification by Low Density Separation.},
+	    author={Chapelle, Olivier and Zien, Alexander},
+		  booktitle={AISTATS},
+		    pages={57--64},
+			  year={2005}
+}
+@article{zhu2002learning,
+	  title={Learning from labeled and unlabeled data with label propagation},
+	    author={Zhu, Xiaojin and Ghahramani, Zoubin},
+		  year={2002},
+		    publisher={Technical Report CMU-CALD-02-107, Carnegie Mellon University}
+}
