--- a/ecrc-procs/hybrid_learning_net.tex
+++ b/ecrc-procs/hybrid_learning_net.tex
@@ -37,6 +37,7 @@
 
 %% The `ecrc' package must be called to make the CRC functionality available
 \usepackage{ecrc}
+\usepackage{hyperref}
 
 %% The ecrc package defines commands needed for running heads and logos.
 %% For running heads, you can set the journal name, the volume, the starting page and the authors
@@ -405,8 +406,8 @@ over again.
 \end{itemize}
 HLN is implemented in Python and all
 our code and results of experiments
-in detail are available at 
-\cololinks{https://github.com/hiroki-kyoto/hybrid-learning-net.git}
+in detail are available at
+\url{https://github.com/hiroki-kyoto/hybrid-learning-net}
 
 %\subsection{The organization of this artical}
 
