--- a/ecrc-procs/hybrid_learning_net.tex
+++ b/ecrc-procs/hybrid_learning_net.tex
@@ -410,8 +410,23 @@ in detail are available at
 \url{https://github.com/hiroki-kyoto/hybrid-learning-net}
 
 %\subsection{The organization of this artical}
-
-
+The rest of the article is as follows.
+In section 2 we describe existing
+semi-supervised algorithms for neural
+network models, recall
+the SOM and explore a different
+training method for SOM when applied in
+the neural network embedding.
+In section 3, we introduce our novel
+architecture HLN, show how to
+embed SOMs into deep architectures of
+neural net.
+In section 4 we explain the exact 
+training theory for HLNs.
+Section 5 gives experimental
+comparisons between nets with HLN
+architecture and without, and the
+last section concludes.
 
 \section{Related work}
 
