--- a/ecrc-procs/ref.bib
+++ b/ecrc-procs/ref.bib
@@ -453,3 +453,21 @@ information).
 		  year={2002},
 		    publisher={Technical Report CMU-CALD-02-107, Carnegie Mellon University}
 }
+@incollection{weston2012deep,
+	  title={Deep learning via semi-supervised embedding},
+	    author={Weston, Jason and Ratle, Fr{\'e}d{\'e}ric and Mobahi, Hossein and Collobert, Ronan},
+		  booktitle={Neural Networks: Tricks of the Trade},
+		    pages={639--655},
+			  year={2012},
+			    publisher={Springer}
+}
+@article{kohonen1998self,
+	  title={The self-organizing map},
+	    author={Kohonen, Teuvo},
+		  journal={Neurocomputing},
+		    volume={21},
+			  number={1},
+			    pages={1--6},
+				  year={1998},
+				    publisher={Elsevier}
+}
